--- a/index.html
+++ b/index.html
@@ -26,45 +26,44 @@
          <img id="logo"src="./assets/images/amtrain-vector-logo-white.png" alt="">
        </div>
       </header>
-      <table>
-        <thead>
-          <tr >
-            <th>Train Name</th>
-            <th>Destination</th>
-            <th>Frequency (min)</th>
-            <th>Next Arrival</th>
-            <th>Minute Away</th>
-          </tr>
-        <tbody id="tableData">
-          
-        </tbody>
-        </table>
-        <div class="schedule"></div>
+        <table>
+          <thead>
+            <tr>
+              <th>Train Name</th>
+              <th>Destination</th>
+              <th>Frequency (min)</th>
+              <th>Next Arrival</th>
+              <th>Minute Away</th>
+            </tr>
+          <tbody id="tableData">
+            
+          </tbody>
+          </table>
 
-        <form role="form">
-          <div class="form-group row">
-            <label for="train-input">Train:</label>
-            <input class="form-control" id="train-input" type="text" />
-          </div>
-          <div class="form-group row">
-            <label for="destination-input">Destination:</label>
-            <input class="form-control" id="destination-input" type="email" />
-          </div>
-          <div class="form-group row">
-            <label for="frequency-input">Frequency:</label>
-            <input class="form-control" id="frequency-input" type="number" />
-          </div>
-          <div class="form-group row">
-            <label for="arrival-input">Next Arrival</label>
-            <textarea
-              class="form-control"
-              id="arrival-input"
-            ></textarea>
-          </div>
-          <button class="btn btn-default" id="add-user" type="submit">
-            Submit
-          </button>
-        </form>
+          <form role="form">
+            <div class="form-group row">
+              <label for="train-input">Train:</label>
+              <input class="form-control" id="train-input" type="text" />
+            </div>
+            <div class="form-group row">
+              <label for="destination-input">Destination: </label>
+              <input class="form-control" id="destination-input" type="text" />
+            </div>
+            <div class="form-group row">
+              <label for="frequency-input">Frequency: </label>
+              <input class="form-control" id="frequency-input" type="time" />
+            </div>
+            <div class="form-group row">
+              <label for="arrival-input">Next Arrival: </label>
+              <input class="form-control" id="frequency-input" type="time" />
+            </div>
+            <div class="btn-container">
+                <button class="btn btn-default" id="add-user" type="submit">
+                  Submit
+                </button>
+              </div>
+          </form>
+
       </div>
       <footer>
           <div class="footer-logo-container">
